--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "path/to/submodule"]
-	path = path/to/submodule
+[submodule "5-aug-24-Limitsss147a"]
+	path = 5-aug-24-Limitsss147a
 	url = https://github.com/revou-fundamental-course/5-aug-24-Limitsss147a
